<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <EditText
                android:id="@+id/ageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="age"
                android:hint="@string/enter_your_age"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <CheckBox
                android:id="@+id/drivingLicenseCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_you_have_a_driving_license" />

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/radioOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:text="@string/other" />
            </RadioGroup>

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:hint="@string/enter_your_phone_number"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_gravity="center" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/navigationFragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.example.mobilt_java23_karl_kowal_lifecycle_v4.NavigationFragment" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
